Add digital-7 font and additional color styling

--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
 <body>
     <div class="calculator-background">
         <div class="result-window">
-            <p class="result">
-                here goes result
-            </p>                     
-            <p class="operation">
-                here goes operation
-            </p>
+            <div class="result"></div>                     
+            <div class="operation"></div>
         </div>                
         <div class="button-container">
             <div class="button-row">
-                <button>Undo</button>
-                <button>Clear</button>
+                <button id="undo">Undo</button>
+                <button id="clear">Clear</button>
             </div>
             <div class="button-row">
                 <button>7</button>
